--- a/Practicals/Practical-4.html
+++ b/Practicals/Practical-4.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Document</title>
+    <title>practical-4</title>
   </head>
 
-  <body style="background-color:rgb(229, 213, 192)">
+  <body style="background-color:rgb(236, 215, 188)">
       <a id="Practical-4" href=""></a>
-    
+    <h2 style="color: crimson">
+      Practical-4 : Create a Website having list of all pratical and their
+      individual Page links.
+    </h2>
+    <h2>Output</h2>
     <h2>Welcome to Live Practical Book</h2>
     <p>
       This is a live Practical Book for the Subject FullStact Web
@@ -17,28 +21,24 @@
       Bootstrap.This book is hosted on Github cloud Platform,You can view all
       practicals from this book.
     </p>
-    <h1 style="color: darkolivegreen">Lists of Practicals</h1>
+    <h1 style="color:darkgreen ">Lists of Practicals</h1>
     <p>
       1.Create a Web page including HTML basic skeleton using offline HTML Editor
       and Online Sandbox Environment
-      <a href="./Practicals/Practical-1.html">Practical-1</a>
+      <a href="./Practical-1.html">Practical-1</a>
     </p>
     <p>
       2.Create a Web page showing a basic html structure using character Entities
       and span tag.
-      <a href="./Practicals/Practical-2.html">Practical-2</a>
+      <a href="./Practical-2.html">Practical-2</a>
     </p>
     <p>
       3.Live your First Web-page on Github.
-      <a href="./Practicals/Practical-3.html">Practical-3</a>
+      <a href="./Practical-3.html">Practical-3</a>
     </p>
     <p>
       4.Create a Website having list of all pratical and their individual Page
-      links. <a href="./Practicals/Practical-4.html">Practical-4</a>
-    </p>
-    <p>
-      5.Create a Web-page showing the use of Image-map in a Web Application.
-      <a href="./Practicals/Practical-5.html">Practical-5</a>
+      links. <a href="#Practical-4">Practical-4</a>
     </p>
   </body>
 </html>
