--- a/Practicals/Practical-3.html
+++ b/Practicals/Practical-3.html
@@ -26,12 +26,7 @@
     </p>
     <h2>Output</h2>
     <h2 style="text-align: center">Live Page On Github</h2>
-    <!-- <img
-      style="display: block; margin-left: auto; margin-right: auto"
-      ;
-      src="../Images/Screenshot 2021-08-21 031228.jpg"
-      alt="Screenshot"
-      width="80%"
-    /> -->
+   
+    <img src="../Images/practical1.png" alt="" width="80%">
   </body>
 </html>
