--- a/Practicals/Practical-3.html
+++ b/Practicals/Practical-3.html
@@ -27,6 +27,6 @@
     <h2>Output</h2>
     <h2 style="text-align: center">Live Page On Github</h2>
    
-    <img src="../Images/practical1.png" alt="" width="80%""height="30%" style="margin-left: 10%;">
+    <img src="../Images/liveprac.jpg" alt="" width="80%""height="30%" style="margin-left: 10%;">
   </body>
 </html>
