--- a/index.html
+++ b/index.html
@@ -44,5 +44,9 @@
       6.create following layout using css layout properties.
       <a href="./Practicals/Practical-6.html">Practical-6</a>
     </p>
+    <p>
+      7.Create a Web Page Layout using div tags.
+      <a href="./Practicals/Practical-7.html">Practical-7</a>
+    </p>
   </body>
 </html>
