--- a/index.html
+++ b/index.html
@@ -48,5 +48,9 @@
       7.Create a Web Page Layout using div tags.
       <a href="./Practicals/Practical-7.html">Practical-7</a>
     </p>
+    <p>
+      8.Create a Web Page having Fixed Navigation Bar with the given content.
+      <a href="./Practicals/Practical-8.html">Practical-8</a>
+    </p>
   </body>
 </html>
