--- a/index.html
+++ b/index.html
@@ -52,5 +52,9 @@
       8.Create a Web Page having Fixed Navigation Bar with the given content.
       <a href="./Practicals/Practical-8.html">Practical-8</a>
     </p>
+    <p>
+      9.Create a Responsive Web Layout with Responsive Navigation Bar.
+      <a href="./Practicals/Practical-9.html">Practical-9</a>
+    </p>
   </body>
 </html>
