--- a/Practicals/Practical-9.html
+++ b/Practicals/Practical-9.html
@@ -12,7 +12,7 @@
 <body>
     <div id="container">
         <div id="header">
-            
+            <h2 style="float: left;margin: 22px;text-transform: uppercase;color: rgb(255, 251, 251);">Beta-labs</h2>
             <input type="checkbox" id="chk" />
             <label for="chk" class="show-btn">
                 <i class="fa fa-bars"></i>
@@ -146,7 +146,7 @@
         <div id="footer">
             <p>
                 Website Template for Practical-9 &copy;
-                <a href="https://scoopmall.in">Scoopmall.in</a><br /><br />
+                <a href="https://www.beta-labs.in/">Beta-labs</a><br /><br />
                 <a href="#top">Back to top</a>
             </p>
         </div>
