--- a/index.html
+++ b/index.html
@@ -56,5 +56,9 @@
       9.Create a Responsive Web Layout with Responsive Navigation Bar.
       <a href="./Practicals/Practical-9.html">Practical-9</a>
     </p>
+    <p>
+      10.Create a Responsive Side-Bar Navigation Menu.
+      <a href="./Practicals/Practical-10.html">Practical-10</a>
+    </p>
   </body>
 </html>
