--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <a href="./Practicals/Practical-10.html">Practical-10</a>
     </p>
     <p>
-      11.Create a Responsive Side-Bar Navigation Menu.
+      11.Create a Responsive Footer.
       <a href="./Practicals/Practical-11.html">Practical-11</a>
     </p>
   </body>
