--- a/Practicals/Practical-12.html
+++ b/Practicals/Practical-12.html
@@ -1,45 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Practical-12</title>
+    <link rel="stylesheet" href="./CSS/Practical-12.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
+    <h2>Welcome to Live Practical Book</h2>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Id blanditiis
-      amet officia facere numquam ex architecto, officiis sapiente minima esse
-      ipsa molestias vitae nisi, sint ut placeat eaque velit voluptate obcaecati
-      hic iusto commodi? Cum delectus incidunt ratione necessitatibus ipsa dicta
-      dolore culpa quasi, reprehenderit nisi fugiat porro, ex ullam veniam
-      aspernatur, nobis eveniet explicabo. Distinctio ipsum reiciendis ex porro
-      vero laboriosam illum alias veritatis eum, natus explicabo sit, molestias
-      impedit. Esse quo architecto eligendi in tempore laudantium error illum
-      officia corporis ipsa dolorem deserunt, sapiente nostrum exercitationem
-      veniam quas sint, amet eius ipsam, ut voluptate dignissimos quaerat.
-      Consequatur necessitatibus, unde dolores sint quae debitis perspiciatis
-      quam fugiat consectetur maiores similique commodi sunt rerum dignissimos
-      aliquam ratione nihil error iste nisi, reprehenderit pariatur!
-      Consequuntur ut veniam repudiandae delectus illum molestiae at, aperiam
-      illo assumenda nam soluta quis. Aspernatur cumque dolorum unde ducimus
-      provident cum aperiam reprehenderit quasi iusto iure voluptas esse, ipsam
-      est inventore odio qui harum delectus dignissimos officia laboriosam nisi
-      adipisci. Repudiandae accusantium porro soluta voluptate, sed quaerat
-      molestiae tempora eius commodi quam doloribus. Officiis velit amet animi
-      culpa maiores vel blanditiis quibusdam porro iusto aperiam corporis quasi
-      laudantium doloribus modi expedita iste, sed atque ullam quas recusandae
-      delectus dolorem! Corporis laudantium itaque quisquam ipsum maxime quasi
-      dolores harum ratione, ab officia. Ad modi tempora similique impedit
-      numquam, enim officia eius ab expedita quas quam deserunt et libero
-      ducimus amet, esse nisi consectetur ipsa nihil unde saepe magnam
-      molestiae! Sit dolorem exercitationem quo culpa eos. Ullam magnam quos ut
-      iusto ducimus dolor architecto, itaque quod natus alias ab eaque culpa id,
-      animi exercitationem fugit, expedita a placeat voluptatum voluptatem
-      voluptate aliquam iste! Veniam, totam iure. Eius eligendi magni recusandae
-      illo optio consequuntur natus deserunt obcaecati excepturi soluta
-      laudantium molestiae asperiores vero voluptatibus, adipisci laboriosam sit
-      repudiandae iusto aperiam!
+      This is a live Practical Book for the Subject FullStact Web
+      development-1.In this book we are preforming all the practicals related to
+      Front-end web development including topics from HTML,CSS,JS and
+      Bootstrap.This book is hosted on Github cloud Platform,You can view all
+      practicals from this book.
     </p>
-  </body>
+    <table align="center">
+        <caption>Live Practical Book</caption>
+        <tr>
+            <th>#</th>
+            <th>Practical Name</th>
+            <th>Link</th>
+            <th>Status</th>
+            <th>Tools</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td id="name">Create a Web page including HTML basic skeleton using offline HTML Editor and Online Sabdbox Environment</td>
+            <td><a href="./Practical-1.html" target="_blank">Practical-1</a> </td>
+            <td id="check">Checked</td>
+            <td><span><i class="fa fa-pencil " title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td id="name">Live your First Web-Page on Github.</td>
+            <td><a href="./Practical-2.html" target="_blank">Practical-2</a> </td>
+            <td id="check">Checked</td>
+            <td><span><i class="fa fa-pencil " title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td id="name">Create a webpage showing a basic html structure using character Entities and span Tag.</td>
+            <td><a href="./Practical-3.html" target="_blank">Practical-3</a> </td>
+            <td id="check">Checked</td>
+            <td><span><i class="fa fa-pencil " title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td id="name">Create a website having list of all practical and their individual practical Page links. </td>
+            <td><a href="./Practical-4.html" target="_blank">Practical-4</a> </td>
+            <td id="check">Checked</td>
+            <td><span><i class="fa fa-pencil " title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td id="name">Create a Web-Page showing the use of Image-Map in the Web Application.</td>
+            <td><a href="./Practical-5.html" target="_blank">Practical-5</a> </td>
+            <td id="check">Checked</td>
+            <td><span><i class="fa fa-pencil " title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td id="name">Create a Card Layout Using CSS layout properties.</td>
+            <td><a href="./Practical-6.html" target="_blank">Practical-6</a> </td>
+            <td id="check">Checked</td>
+            <td><span><i class="fa fa-pencil " title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
+        </tr>
+        <tr>
+            <td>7</td>
+            <td id="name">Create a Webpage Layout using div tags. </td>
+            <td><a href="./Practical-7.html" target="_blank">Practical-7</a> </td>
+            <td id="check">Checked</td>
+            <td><span><i class="fa fa-pencil " title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
+        </tr>
+        <tr>
+            <td>8</td>
+            <td id="name">Create a Web Page having Fixed Navigation Bar with the given content.</td>
+            <td><a href="./Practical-8.html" target="_blank">Practical-8</a> </td>
+            <td id="check">Checked</td>
+            <td><span><i class="fa fa-pencil " title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
+        </tr>
+        <tr>
+            <td>9</td>
+            <td id="name">Create a Responsive Web Layout with Responsive Navigation Bar. </td>
+            <td><a href="./Practical-9.html" target="_blank">Practical-9</a> </td>
+            <td id="check">Checked</td>
+            <td><span><i class="fa fa-pencil " title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
+        </tr>
+        <tr>
+            <td>10</td>
+            <td id="name">Create a Responsive Side-Bar Navigation Menu.</td>
+            <td><a href="./Practical-10.html" target="_blank">Practical-10</a> </td>
+            <td id="check">Checked</td>
+            <td><span><i class="fa fa-pencil" title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
+        </tr>
+        <tr>
+            <td>11</td>
+            <td id="name">Create a Responsive Footer.</td>
+            <td><a href="./Practical-11.html" target="_blank">Practical-11</a> </td>
+            <td id="check">Checked</td>
+            <td><span><i class="fa fa-pencil" title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
+        </tr>
+        <tr>
+            <td>12</td>
+            <td id="name">Create a Table that represent Live Practical Book Records.</td>
+            <td><a href="./Practical-12.html" target="_blank">Practical-12</a> </td>
+            <td id="check" style="color: rgb(221, 7, 50); font-weight: 300;">Un-Checked</td>
+            <td><span><i class="fa fa-pencil" title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
+        </tr>
+    </table>
+</body>
 </html>
