--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Document</title>
-  </head>
-
-  <body style="background-color:rgb(229, 213, 192)">
-      <a id="Practical-4" href=""></a>
-    
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Practical-12</title>
+    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
     <h2>Welcome to Live Practical Book</h2>
     <p>
       This is a live Practical Book for the Subject FullStact Web
@@ -17,52 +17,99 @@
       Bootstrap.This book is hosted on Github cloud Platform,You can view all
       practicals from this book.
     </p>
-    <h1 style="color: darkolivegreen">Lists of Practicals</h1>
-    <p>
-      1.Create a Web page including HTML basic skeleton using offline HTML Editor
-      and Online Sandbox Environment
-      <a href="./Practicals/Practical-1.html">Practical-1</a>
-    </p>
-    <p>
-      2.Create a Web page showing a basic html structure using character Entities
-      and span tag.
-      <a href="./Practicals/Practical-2.html">Practical-2</a>
-    </p>
-    <p>
-      3.Live your First Web-page on Github.
-      <a href="./Practicals/Practical-3.html">Practical-3</a>
-    </p>
-    <p>
-      4.Create a Website having list of all pratical and their individual Page
-      links. <a href="./Practicals/Practical-4.html">Practical-4</a>
-    </p>
-    <p>
-      5.Create a Web-page showing the use of Image-map in a Web Application.
-      <a href="./Practicals/Practical-5.html">Practical-5</a>
-    </p>
-    <p>
-      6.create following layout using css layout properties.
-      <a href="./Practicals/Practical-6.html">Practical-6</a>
-    </p>
-    <p>
-      7.Create a Web Page Layout using div tags.
-      <a href="./Practicals/Practical-7.html">Practical-7</a>
-    </p>
-    <p>
-      8.Create a Web Page having Fixed Navigation Bar with the given content.
-      <a href="./Practicals/Practical-8.html">Practical-8</a>
-    </p>
-    <p>
-      9.Create a Responsive Web Layout with Responsive Navigation Bar.
-      <a href="./Practicals/Practical-9.html">Practical-9</a>
-    </p>
-    <p>
-      10.Create a Responsive Side-Bar Navigation Menu.
-      <a href="./Practicals/Practical-10.html">Practical-10</a>
-    </p>
-    <p>
-      11.Create a Responsive Footer.
-      <a href="./Practicals/Practical-11.html">Practical-11</a>
-    </p>
-  </body>
+    <table align="center">
+        <caption>Live Practical Book</caption>
+        <tr>
+            <th>#</th>
+            <th>Practical Name</th>
+            <th>Link</th>
+            <th>Status</th>
+            <th>Tools</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td id="name">Create a Web page including HTML basic skeleton using offline HTML Editor and Online Sabdbox Environment</td>
+            <td><a href="./Practicals/Practical-1.html" target="_blank">Practical-1</a> </td>
+            <td id="check">Checked</td>
+            <td><span><i class="fa fa-pencil " title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td id="name">Live your First Web-Page on Github.</td>
+            <td><a href="./Practicals/Practical-2.html" target="_blank">Practical-2</a> </td>
+            <td id="check">Checked</td>
+            <td><span><i class="fa fa-pencil " title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td id="name">Create a webpage showing a basic html structure using character Entities and span Tag.</td>
+            <td><a href="./Practicals/Practical-3.html" target="_blank">Practical-3</a> </td>
+            <td id="check">Checked</td>
+            <td><span><i class="fa fa-pencil " title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td id="name">Create a website having list of all practical and their individual practical Page links. </td>
+            <td><a href="./Practicals/Practical-4.html" target="_blank">Practical-4</a> </td>
+            <td id="check">Checked</td>
+            <td><span><i class="fa fa-pencil " title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td id="name">Create a Web-Page showing the use of Image-Map in the Web Application.</td>
+            <td><a href="./Practicals/Practical-5.html" target="_blank">Practical-5</a> </td>
+            <td id="check">Checked</td>
+            <td><span><i class="fa fa-pencil " title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td id="name">Create a Card Layout Using CSS layout properties.</td>
+            <td><a href="./Practicals/Practical-6.html" target="_blank">Practical-6</a> </td>
+            <td id="check">Checked</td>
+            <td><span><i class="fa fa-pencil " title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
+        </tr>
+        <tr>
+            <td>7</td>
+            <td id="name">Create a Webpage Layout using div tags. </td>
+            <td><a href="./Practicals/Practical-7.html" target="_blank">Practical-7</a> </td>
+            <td id="check">Checked</td>
+            <td><span><i class="fa fa-pencil " title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
+        </tr>
+        <tr>
+            <td>8</td>
+            <td id="name">Create a Web Page having Fixed Navigation Bar with the given content.</td>
+            <td><a href="./Practicals/Practical-8.html" target="_blank">Practical-8</a> </td>
+            <td id="check">Checked</td>
+            <td><span><i class="fa fa-pencil " title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
+        </tr>
+        <tr>
+            <td>9</td>
+            <td id="name">Create a Responsive Web Layout with Responsive Navigation Bar. </td>
+            <td><a href="./Practicals/Practical-9.html" target="_blank">Practical-9</a> </td>
+            <td id="check">Checked</td>
+            <td><span><i class="fa fa-pencil " title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
+        </tr>
+        <tr>
+            <td>10</td>
+            <td id="name">Create a Responsive Side-Bar Navigation Menu.</td>
+            <td><a href="./Practicals/Practical-10.html" target="_blank">Practical-10</a> </td>
+            <td id="check">Checked</td>
+            <td><span><i class="fa fa-pencil" title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
+        </tr>
+        <tr>
+            <td>11</td>
+            <td id="name">Create a Responsive Footer.</td>
+            <td><a href="./Practicals/Practical-11.html" target="_blank">Practical-11</a> </td>
+            <td id="check">Checked</td>
+            <td><span><i class="fa fa-pencil" title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
+        </tr>
+        <tr>
+            <td>12</td>
+            <td id="name">Create a Table that represent Live Practical Book Records.</td>
+            <td><a href="./Practicals/Practical-12.html" target="_blank">Practical-12</a> </td>
+            <td id="check" style="color: rgb(221, 7, 50); font-weight: 300;">Un-Checked</td>
+            <td><span><i class="fa fa-pencil" title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
+        </tr>
+    </table>
+</body>
 </html>
