--- a/index.html
+++ b/index.html
@@ -107,6 +107,13 @@
             <td>12</td>
             <td id="name">Create a Table that represent Live Practical Book Records.</td>
             <td><a href="./Practicals/Practical-12.html" target="_blank">Practical-12</a> </td>
+            <td id="check">Checked</td>
+            <td><span><i class="fa fa-pencil" title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
+        </tr>
+        <tr>
+            <td>13</td>
+            <td id="name">Create a Custom Price Table Template.<td>
+            <td><a href="./Practicals/Practical-13.html" target="_blank">Practical-13</a> </td>
             <td id="check" style="color: rgb(221, 7, 50); font-weight: 300;">Un-Checked</td>
             <td><span><i class="fa fa-pencil" title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
         </tr>
