--- a/index.html
+++ b/index.html
@@ -114,6 +114,13 @@
             <td>13</td>
             <td id="name">Create a Custom Price Table Template.</td>
             <td><a href="./Practicals/Practical-13.html" target="_blank">Practical-13</a></td>
+            <td id="check">Checked</td>
+            <td><span><i class="fa fa-pencil" title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
+        </tr>
+        <tr>
+            <td>14</td>
+            <td id="name">Create a Counter Page using JavaScript.</td>
+            <td><a href="./Practicals/Practical-14.html" target="_blank">Practical-14</a></td>
             <td id="check" style="color: rgb(221, 7, 50); font-weight: 300;">Un-Checked</td>
             <td><span><i class="fa fa-pencil" title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
         </tr>
