Final Practical Updated

--- a/index.html
+++ b/index.html
@@ -124,6 +124,13 @@
             <td id="check" style="color: rgb(221, 7, 50); font-weight: 300;">Un-Checked</td>
             <td><span><i class="fa fa-pencil" title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
         </tr>
+        <tr>
+            <td>15</td>
+            <td id="name">Final Practical</td>
+            <td><a href="./Practicals/FinalPractical.html" target="_blank">Final Practical</a></td>
+            <td id="check" style="color: rgb(221, 7, 50); font-weight: 300;">Un-Checked</td>
+            <td><span><i class="fa fa-pencil" title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
+        </tr>
     </table>
 </body>
 </html>
