FinalPrac_Css updated

--- a/Practicals/FinalPractical.html
+++ b/Practicals/FinalPractical.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Final Practical</title>
-    <link rel="stylesheet" href="finalPrac.css">
+    <link rel="stylesheet" href="./CSS/FinalPractical.css">
     <script
       src="https://kit.fontawesome.com/59bbb9dc7f.js"
       crossorigin="anonymous"
