--- a/Practicals/FinalPractical.html
+++ b/Practicals/FinalPractical.html
@@ -41,7 +41,7 @@
                   <button class="googleplay">Google Play</button>
                   <button class="appstore"> App Store</button>
               </div>
-              <img src="Template-48Pic.png" alt="img" style="height: 80vh; width: 40vw; ">
+              <img src="../Images/Template-48Pic.png" alt="img" style="height: 80vh; width: 40vw; ">
 
             </div>
             <!-- <div class="right">
