--- a/index.html
+++ b/index.html
@@ -126,6 +126,13 @@
         </tr>
         <tr>
             <td>15</td>
+            <td id="name">Create an HTML Form and Validate it with JavaScript (Client-side Programming Language).</td>
+            <td><a href="./Practicals/Practical-15.html" target="_blank">Practical-15</a></td>
+            <td id="check" style="color: rgb(221, 7, 50); font-weight: 300;">Un-Checked</td>
+            <td><span><i class="fa fa-pencil" title="Edit"></i></span><i class="fa fa-trash" title="Delete"></i></td>
+        </tr>
+        <tr>
+            <td>16</td>
             <td id="name">Final Practical</td>
             <td><a href="./Practicals/FinalPractical.html" target="_blank">Final Practical</a></td>
             <td id="check" style="color: rgb(221, 7, 50); font-weight: 300;">Un-Checked</td>
